style: fix table placeholder background clipping issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -499,6 +499,11 @@ h3.search-sub-form-title {
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.02), inset 0 2px 5px rgba(0, 0, 0, 0.08);
 }
 
+.ant-table-wrapper .ant-table.ant-table-empty .ant-table-tbody > tr.ant-table-placeholder {
+  /* patch for ant background clip issue in empty tables with no headers */
+  background: none;
+}
+
 /* END search */
 
 /* BEGIN phenopackets/other clinical+phenotypic metadata views */
